--- a/doggo/Base.lproj/Main.storyboard
+++ b/doggo/Base.lproj/Main.storyboard
@@ -23,15 +23,21 @@
                                     <constraint firstAttribute="width" constant="300" id="ein-YQ-LH8"/>
                                 </constraints>
                             </view>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="DoggoLogo.png" translatesAutoresizingMaskIntoConstraints="NO" id="CXd-kA-6ME">
-                                <rect key="frame" x="87" y="615" width="240" height="128"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="DoggoLogo.png" translatesAutoresizingMaskIntoConstraints="NO" id="CXd-kA-6ME">
+                                <rect key="frame" x="87" y="544" width="240" height="128"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="240" id="N9U-v7-T8g"/>
+                                    <constraint firstAttribute="height" constant="128" id="hfP-BX-3Es"/>
+                                </constraints>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
                             <constraint firstItem="LgN-I9-CqJ" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="2ax-Cz-LAu"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="CXd-kA-6ME" secondAttribute="trailing" constant="87" id="D86-8H-uLI"/>
+                            <constraint firstItem="CXd-kA-6ME" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="87" id="LlT-ZW-n5O"/>
                             <constraint firstItem="LgN-I9-CqJ" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="OhY-ru-KCX"/>
+                            <constraint firstItem="CXd-kA-6ME" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="topMargin" constant="500" id="pZC-IE-7PJ"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
@@ -63,36 +69,50 @@
         <!--Scanner-->
         <scene sceneID="vi8-o8-fJH">
             <objects>
-                <viewController id="XMJ-ch-gZP" sceneMemberID="viewController">
+                <viewController id="XMJ-ch-gZP" customClass="Scanner" customModule="doggo" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="aZ8-bH-DEf">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="HJe-3N-rTA">
-                                <rect key="frame" x="0.0" y="39" width="414" height="44"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HJe-3N-rTA">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="aNQ-z1-UmT"/>
+                                </constraints>
                                 <items>
                                     <barButtonItem title="Item" image="camera.fill" catalog="system" id="ntm-tL-r9m" userLabel="Camera">
                                         <connections>
-                                            <action selector="Camera:" destination="eSV-8v-wq0" id="CgY-or-Bbr"/>
+                                            <action selector="cameraTapped:" destination="XMJ-ch-gZP" id="Zdy-t2-JKA"/>
                                         </connections>
                                     </barButtonItem>
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="hdK-cg-xiT"/>
                                     <barButtonItem title="Item" image="photo.fill" catalog="system" id="nxV-vU-XNy" userLabel="PhotoLibrary">
                                         <connections>
-                                            <action selector="PhotoLibrary:" destination="eSV-8v-wq0" id="1Cr-hq-2tc"/>
+                                            <action selector="photoLibraryTapped:" destination="XMJ-ch-gZP" id="H1B-cr-wTp"/>
                                         </connections>
                                     </barButtonItem>
                                 </items>
                             </toolbar>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="YmN-fB-mXq">
+                                <rect key="frame" x="87" y="357" width="240" height="128"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="HJe-3N-rTA" firstAttribute="leading" secondItem="gwm-uf-zyN" secondAttribute="leading" id="Duc-nh-JZo"/>
+                            <constraint firstItem="HJe-3N-rTA" firstAttribute="trailing" secondItem="gwm-uf-zyN" secondAttribute="trailing" id="kE0-wV-W6l"/>
+                            <constraint firstItem="HJe-3N-rTA" firstAttribute="top" secondItem="gwm-uf-zyN" secondAttribute="top" id="nVw-nJ-RCS"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="gwm-uf-zyN"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Scanner" image="camera" catalog="system" id="SCJ-Ez-Yfa"/>
+                    <connections>
+                        <outlet property="PhotoLibrary" destination="nxV-vU-XNy" id="Kz4-Y3-2Ee"/>
+                        <outlet property="imageView" destination="YmN-fB-mXq" id="VUw-53-Cxo"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="usv-0V-hiB" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-                <exit id="eSV-8v-wq0" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="2492.753623188406" y="-661.60714285714278"/>
         </scene>
